--- a/admin/package.json
+++ b/admin/package.json
@@ -28,14 +28,17 @@
     "classnames": "^2.5.1",
     "customize-cra": "^1.0.0",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "sass": "^1.77.6",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
